; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_socket_server.c_send_buffer.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_socket_server.c_send_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket_server = type { i32 }
%struct.socket = type { i32, i32*, %struct.TYPE_2__, i32, i32 }
%struct.TYPE_2__ = type { %struct.write_buffer*, %struct.write_buffer* }
%struct.write_buffer = type { i8*, i32, %struct.write_buffer*, i8*, i32 }
%struct.socket_lock = type { i32 }
%struct.socket_message = type { i32 }
%struct.send_object = type { i32, i64 }

@SIZEOF_TCPBUFFER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.socket_server*, %struct.socket*, %struct.socket_lock*, %struct.socket_message*)* @send_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @send_buffer(%struct.socket_server* %0, %struct.socket* %1, %struct.socket_lock* %2, %struct.socket_message* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.socket_server*, align 8
  %7 = alloca %struct.socket*, align 8
  %8 = alloca %struct.socket_lock*, align 8
  %9 = alloca %struct.socket_message*, align 8
  %10 = alloca %struct.write_buffer*, align 8
  %11 = alloca %struct.send_object, align 8
  %12 = alloca i32, align 4
  store %struct.socket_server* %0, %struct.socket_server** %6, align 8
  store %struct.socket* %1, %struct.socket** %7, align 8
  store %struct.socket_lock* %2, %struct.socket_lock** %8, align 8
  store %struct.socket_message* %3, %struct.socket_message** %9, align 8
  %13 = load %struct.socket_lock*, %struct.socket_lock** %8, align 8
  %14 = call i32 @socket_trylock(%struct.socket_lock* %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %4
  store i32 -1, i32* %5, align 4
  br label %105

17:                                               ; preds = %4
  %18 = load %struct.socket*, %struct.socket** %7, align 8
  %19 = getelementptr inbounds %struct.socket, %struct.socket* %18, i32 0, i32 1
  %20 = load i32*, i32** %19, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %22, label %96

22:                                               ; preds = %17
  %23 = load i32, i32* @SIZEOF_TCPBUFFER, align 4
  %24 = call %struct.write_buffer* @MALLOC(i32 %23)
  store %struct.write_buffer* %24, %struct.write_buffer** %10, align 8
  %25 = load %struct.socket_server*, %struct.socket_server** %6, align 8
  %26 = load %struct.socket*, %struct.socket** %7, align 8
  %27 = getelementptr inbounds %struct.socket, %struct.socket* %26, i32 0, i32 1
  %28 = load i32*, i32** %27, align 8
  %29 = bitcast i32* %28 to i8*
  %30 = load %struct.socket*, %struct.socket** %7, align 8
  %31 = getelementptr inbounds %struct.socket, %struct.socket* %30, i32 0, i32 4
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @send_object_init(%struct.socket_server* %25, %struct.send_object* %11, i8* %29, i32 %32)
  %34 = load %struct.write_buffer*, %struct.write_buffer** %10, align 8
  %35 = getelementptr inbounds %struct.write_buffer, %struct.write_buffer* %34, i32 0, i32 4
  store i32 %33, i32* %35, align 8
  %36 = getelementptr inbounds %struct.send_object, %struct.send_object* %11, i32 0, i32 1
  %37 = load i64, i64* %36, align 8
  %38 = inttoptr i64 %37 to i8*
  %39 = load %struct.socket*, %struct.socket** %7, align 8
  %40 = getelementptr inbounds %struct.socket, %struct.socket* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds i8, i8* %38, i64 %42
  %44 = load %struct.write_buffer*, %struct.write_buffer** %10, align 8
  %45 = getelementptr inbounds %struct.write_buffer, %struct.write_buffer* %44, i32 0, i32 0
  store i8* %43, i8** %45, align 8
  %46 = getelementptr inbounds %struct.send_object, %struct.send_object* %11, i32 0, i32 0
  %47 = load i32, i32* %46, align 8
  %48 = load %struct.socket*, %struct.socket** %7, align 8
  %49 = getelementptr inbounds %struct.socket, %struct.socket* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 8
  %51 = sub nsw i32 %47, %50
  %52 = load %struct.write_buffer*, %struct.write_buffer** %10, align 8
  %53 = getelementptr inbounds %struct.write_buffer, %struct.write_buffer* %52, i32 0, i32 1
  store i32 %51, i32* %53, align 8
  %54 = load %struct.socket*, %struct.socket** %7, align 8
  %55 = getelementptr inbounds %struct.socket, %struct.socket* %54, i32 0, i32 1
  %56 = load i32*, i32** %55, align 8
  %57 = bitcast i32* %56 to i8*
  %58 = load %struct.write_buffer*, %struct.write_buffer** %10, align 8
  %59 = getelementptr inbounds %struct.write_buffer, %struct.write_buffer* %58, i32 0, i32 3
  store i8* %57, i8** %59, align 8
  %60 = load %struct.write_buffer*, %struct.write_buffer** %10, align 8
  %61 = getelementptr inbounds %struct.write_buffer, %struct.write_buffer* %60, i32 0, i32 1
  %62 = load i32, i32* %61, align 8
  %63 = load %struct.socket*, %struct.socket** %7, align 8
  %64 = getelementptr inbounds %struct.socket, %struct.socket* %63, i32 0, i32 3
  %65 = load i32, i32* %64, align 8
  %66 = add nsw i32 %65, %62
  store i32 %66, i32* %64, align 8
  %67 = load %struct.socket*, %struct.socket** %7, align 8
  %68 = getelementptr inbounds %struct.socket, %struct.socket* %67, i32 0, i32 2
  %69 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %68, i32 0, i32 0
  %70 = load %struct.write_buffer*, %struct.write_buffer** %69, align 8
  %71 = icmp eq %struct.write_buffer* %70, null
  br i1 %71, label %72, label %82

72:                                               ; preds = %22
  %73 = load %struct.write_buffer*, %struct.write_buffer** %10, align 8
  %74 = load %struct.socket*, %struct.socket** %7, align 8
  %75 = getelementptr inbounds %struct.socket, %struct.socket* %74, i32 0, i32 2
  %76 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %75, i32 0, i32 1
  store %struct.write_buffer* %73, %struct.write_buffer** %76, align 8
  %77 = load %struct.socket*, %struct.socket** %7, align 8
  %78 = getelementptr inbounds %struct.socket, %struct.socket* %77, i32 0, i32 2
  %79 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %78, i32 0, i32 0
  store %struct.write_buffer* %73, %struct.write_buffer** %79, align 8
  %80 = load %struct.write_buffer*, %struct.write_buffer** %10, align 8
  %81 = getelementptr inbounds %struct.write_buffer, %struct.write_buffer* %80, i32 0, i32 2
  store %struct.write_buffer* null, %struct.write_buffer** %81, align 8
  br label %93

82:                                               ; preds = %22
  %83 = load %struct.socket*, %struct.socket** %7, align 8
  %84 = getelementptr inbounds %struct.socket, %struct.socket* %83, i32 0, i32 2
  %85 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %84, i32 0, i32 0
  %86 = load %struct.write_buffer*, %struct.write_buffer** %85, align 8
  %87 = load %struct.write_buffer*, %struct.write_buffer** %10, align 8
  %88 = getelementptr inbounds %struct.write_buffer, %struct.write_buffer* %87, i32 0, i32 2
  store %struct.write_buffer* %86, %struct.write_buffer** %88, align 8
  %89 = load %struct.write_buffer*, %struct.write_buffer** %10, align 8
  %90 = load %struct.socket*, %struct.socket** %7, align 8
  %91 = getelementptr inbounds %struct.socket, %struct.socket* %90, i32 0, i32 2
  %92 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %91, i32 0, i32 0
  store %struct.write_buffer* %89, %struct.write_buffer** %92, align 8
  br label %93

93:                                               ; preds = %82, %72
  %94 = load %struct.socket*, %struct.socket** %7, align 8
  %95 = getelementptr inbounds %struct.socket, %struct.socket* %94, i32 0, i32 1
  store i32* null, i32** %95, align 8
  br label %96

96:                                               ; preds = %93, %17
  %97 = load %struct.socket_server*, %struct.socket_server** %6, align 8
  %98 = load %struct.socket*, %struct.socket** %7, align 8
  %99 = load %struct.socket_lock*, %struct.socket_lock** %8, align 8
  %100 = load %struct.socket_message*, %struct.socket_message** %9, align 8
  %101 = call i32 @send_buffer_(%struct.socket_server* %97, %struct.socket* %98, %struct.socket_lock* %99, %struct.socket_message* %100)
  store i32 %101, i32* %12, align 4
  %102 = load %struct.socket_lock*, %struct.socket_lock** %8, align 8
  %103 = call i32 @socket_unlock(%struct.socket_lock* %102)
  %104 = load i32, i32* %12, align 4
  store i32 %104, i32* %5, align 4
  br label %105

105:                                              ; preds = %96, %16
  %106 = load i32, i32* %5, align 4
  ret i32 %106
}

declare dso_local i32 @socket_trylock(%struct.socket_lock*) #1

declare dso_local %struct.write_buffer* @MALLOC(i32) #1

declare dso_local i32 @send_object_init(%struct.socket_server*, %struct.send_object*, i8*, i32) #1

declare dso_local i32 @send_buffer_(%struct.socket_server*, %struct.socket*, %struct.socket_lock*, %struct.socket_message*) #1

declare dso_local i32 @socket_unlock(%struct.socket_lock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
